@@ -1,7 +1,9 @@
 AUX app.ini 718 BLAKE2B 6d8abd16cc2eb522e5111d4874692a37698e59ed3db0d2072572f4ab7b6edcabe890aa9129beba932dadd9340e8d5491289ec562f1f9e7ac864fcc89d8389147 SHA512 5d2a6664c5b0bff5d1eeab2a07b7246230837273decaabbe6376b7315c18a897887530b1fdd7cd68eea9c6ffac90ef90d6769ef15e75129d6b67a0ca0ec775a5
 AUX reposilite-2.9.1.cdn 1651 BLAKE2B 39ad2179a6a4d465447f03bdfa39ad7e942bde35b833a7f06befc0fa9f8afb02a87b73faac5a218dc9fe9e2c86757144033254e13929ab3b11165a7dba4d79a0 SHA512 fd1d78f50efc1f9e433a0af5261e45ff30813b988447a7729b694652d6c10da432eee9a12548d9690f57da85d3dd8d7c9ea8e720368e5db9108595eee21b433f
-AUX reposilite.service 533 BLAKE2B 98490e09657c606639239d4da6397c8930cb9731a4637b9af8e59533b264c574d5626c45113aec9b11ba3cec87e7e0a8f743fb6f7cf15f03b835a1e3875cbdc8 SHA512 5687a77b44c538d6ec2da2ac19cc1b05a0fd931b9fcb6bc13016ef4f2601b0bf4a218bcd1e4e56ce892ffb876cd479cbf537dd21920a1178b61cb8de9e31bf64
+AUX reposilite-2.9.4.cdn 1992 BLAKE2B bca5082e8dff4a99312cc43c32dcdad757236c853a85bd2611177f017a56b1bdbdf43319ddcecb48580861eb0be35caef4c57ee4f4a1c2cba35a91eb59965301 SHA512 1559e93546cd16c293a0dd11900ae5fa7734313655a713d67ff2d561491c6520737803c814c0250100331ec11c7165c1b40e850c58201703d35be0d27786c987
+AUX reposilite.service 578 BLAKE2B 972c0743bc6099a1ef95606e8e62351b1de267a7d2dcbe2a138fed483a340adae8e0c94baa5ea53b60e420eb40c0d3fdc92a657965e63972f02ce5b91d3ee73f SHA512 792abddf895e6044fba9ed681639fa49ec74efffa6f60826399a9c3ccc1c9559f75bc8e4c5ed6077627e145f8f22b20037566e11967f7da31fd915e044af741f
 AUX reposilite.sh 744 BLAKE2B 524b3120b59b60c01e65654e4c7bf34d359e61b29f0e31a4762fda179c7b61ac91bea91ffb1c9d5d0470e0ae3683cad8ff32086125946c42b08a9fd156f65f10 SHA512 c781849ae3c116179ee3446ccf8620814514e4128df6cad917a010ffaba9efdd6cddda686a77ef348b80a920cd67b7ba19bc2a62c519ca7a795acdc8cc486c50
 EBUILD reposilite-2.9.1.ebuild 953 BLAKE2B 77a1a44119f5a5fe4e012c0d6f6fbc526ee1466b076ac20653b9c09953141242c1f1f04cc22960de7944f679a5264679df602f369daef159958d8267630e1034 SHA512 44989aa39d1a89d77f5c196b69bafe8397c95f8b59ba5654ebbb1d69981c6d0679b44e0613dd5cd2a8c5812b84f6ea9339c2d2ec5b4c4879b728be480284e9f0
-MISC ChangeLog 450 BLAKE2B ccbc5736ddc2df16901a3f2e733937991383b57a76b87f9da860644e50ad7e730747b2898d1d391de28ba7f479376e02644a2d214f0da915fee2fdf9da8223b0 SHA512 7e2d91d384d3c1af259075a14569b00368a39a0f2154204b67f3c0271eead4f740ded2f71219f32b669e0ee67b8921b533f3d2124b922df460535947ade42e90
+EBUILD reposilite-2.9.4.ebuild 953 BLAKE2B 3f01740c29afc84c9873d321798d120397f74beebef9ebffb5093617a378df0070facf5b929c52c69001e17352d89ca88d61ae16c351b3f705cc3097fe71bcd5 SHA512 ff9bd200f341ddf1be14322e98d35e75e45f65853ee5229027b18eaa8f4aefd0781935d5c3f6b6073c69abcbaa515d1c957646041c78a5795d04277b43bcfbb0
+MISC ChangeLog 650 BLAKE2B 70d3bce06fc1393d2c0a47142256e7eb6c04ad40cd22e217e935946ad9c0addd92664a40917af5cdbd809e9ec7e8135b9eb22349704b58446c0deec0ae738421 SHA512 8a7be537495122374d5d28c5ac26f2038ed4a9422973e45874b5debe2832409a6a4edd2da6df3b3e06f9463a1d5cfa4953ff43b55222645213cda4847b32c58c
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
