@@ -5,7 +5,9 @@ Documentation=https://reposilite.com/docs/about
 AssertPathIsDirectory=/var/lib/reposilite-data
 AssertPathIsReadWrite=/var/lib/reposilite-data
 
+After=docker.service
 After=network.target
+Requires=docker.service
 Requires=network.target
 
 [Service]
